# yare-rs

./: Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: rustdoc.yaml
implementors/yareio_sys/: trait.EnumerateByID.js
src/: base.rs  console.rs  graphics.rs  lib.rs  memory.rs  outpost.rs  players.rs  render_service.rs  spirit.rs  star.rs  structure.rs
src/structure/: base.rs  outpost.rs  star.rs
src/yareio_sys/: base.rs.html  console.rs.html  graphics.rs.html  lib.rs.html  memory.rs.html  outpost.rs.html  players.rs.html  render_service.rs.html  spirit.rs.html  star.rs.html
yareio_sys/: all.html  enum.Shape.html  enum.StructureType.html  index.html  macro.log.html  sidebar-items.js  static.tick.html  struct.ArrayTypedIter.html  struct.Destructible.html  struct.DestructibleID.html  struct.Entity.html  struct.EntityID.html  struct.LivingDestructible.html  struct.LivingDestructibleID.html  struct.LivingEntity.html  struct.LivingEntityID.html  struct.OutpostSight.html  struct.Position.html  struct.Sight.html  struct.Structure.html  struct.StructureID.html  trait.EnumerateByID.html  trait.GetByID.html  trait.TryGetByID.html
yareio_sys/base/: index.html  sidebar-items.js  static.base.html  static.bases.html  static.enemy_base.html  struct.Base.html  struct.BaseID.html  struct.Bases.html
yareio_sys/console/: fn.log.html  index.html  sidebar-items.js
yareio_sys/graphics/: fn.circle.html  fn.line.html  fn.linewidth.html  fn.rect.html  fn.set_linewidth.html  fn.set_style.html  fn.style.html  index.html  (+1 more)
(+93 files in other folders)
