[package]
name = "yareio-sys"
version = "0.9.0"
authors = ["Jules Bertholet <jules.bertholet@gmail.com>"]
edition = "2018"
description = "Rust bindings for Yare.io"
readme = "README.md"
repository = "https://github.com/Jules-Bertholet/yareio-rs"
documentation = "https://docs.rs/yareio-sys/0.9.0/yareio_sys/"
license = "MIT"
keywords = ["yareio"]
categories = ["wasm", "games"]

[lib]
crate-type = ["rlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
wasm-bindgen = "0.2.75"
js-sys = "0.3.52"

[features]
RenderService = []
circles = []
squares = []
triangles = []
